--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -639,7 +639,7 @@
                                 </div>
                                 <button class="btn btn-primary" style="padding: 8px 16px; font-size: 0.9rem;" @onclick="() => OpenWizard(1)">
                                     <i class="bi bi-gear" style="margin-right: 6px;"></i>
-                                    Edit Plan
+                                    Update Plan
                                 </button>
                             </div>
                         </div>
@@ -727,7 +727,7 @@
                                     </div>
                                 </div>
                                 <div class="actions">
-                                    <button class="btn-edit" @onclick="() => OpenWizard(1)">Edit</button>
+                                    <button class="btn-edit" @onclick="() => OpenWizard(1)">Update</button>
                                 </div>
                             </div>
 
@@ -811,7 +811,7 @@
                                     </div>
                                 </div>
                                 <div class="actions">
-                                    <button class="btn-edit" @onclick="() => OpenWizard(2)">Edit</button>
+                                    <button class="btn-edit" @onclick="() => OpenWizard(2)">Update</button>
                                 </div>
                             </div>
 
@@ -881,7 +881,7 @@
                                     </div>
                                 </div>
                                 <div class="actions">
-                                    <button class="btn-edit" @onclick="() => OpenWizard(3)">Edit</button>
+                                    <button class="btn-edit" @onclick="() => OpenWizard(3)">Update</button>
                                 </div>
                             </div>
 
@@ -938,7 +938,7 @@
                                     </div>
                                 </div>
                                 <div class="actions">
-                                    <button class="btn-edit" @onclick="() => OpenWizard(4)">Edit</button>
+                                    <button class="btn-edit" @onclick="() => OpenWizard(4)">Update</button>
                                 </div>
                             </div>
                             }
@@ -987,7 +987,7 @@
                                     </div>
                                 </div>
                                 <div class="actions">
-                                    <button class="btn-edit" @onclick="() => OpenWizard(5)">Edit</button>
+                                    <button class="btn-edit" @onclick="() => OpenWizard(5)">Update</button>
                                 </div>
                             </div>
                             }
