--- a/FinPlan.Web/Components/Shared/RetirementProjection.razor
+++ b/FinPlan.Web/Components/Shared/RetirementProjection.razor
@@ -6,6 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web
 
 @code {
+    [Parameter] public bool IsSimpleMode { get; set; } = false;
+    
     private bool showToolTipYear = false;
     private bool showToolTipYourAge = false;
     private bool showToolTipPartnerAge = false;
